--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/git": "^7.0.16",
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.1",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
     "@types/react": "^16.9.11",
-    "@types/react-dom": "^16.9.3",
+    "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
     "eslint": "^6.5.1",
@@ -92,12 +92,11 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "!<rootDir>/__tests__/**/*.ts",
       "!<rootDir>/src/index.ts",
       "<rootDir>/src/**/*.ts"
     ],
     "testMatch": [
-      "<rootDir>/tests/**/*.test.ts"
+      "<rootDir>/tests/**/*.test.tsx"
     ],
     "coverageDirectory": "<rootDir>/reports/coverage"
   },
