--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,10 @@
     "moduleResolution": "node",
     "noImplicitAny": false,
     "outDir": "./dist",
+    "sourceRoot": "./src",
     "target": "es5",
     "jsx": "react"
   },
-  "include": [
-    "src/index.tsx"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
