--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
         run: |
           yarn
           yarn build
-      - name: Run Tests With Docker-Compose
-        run: docker-compose -f docker-compose.test.yml up --exit-code-from lib
+      - name: Run Tests
+        run: yarn test:cov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1.0.2
         with:
