--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,8 @@ jobs:
         run: |
           yarn
           yarn build
-      - name: Run Tests With Docker-Compose
-        run: docker-compose -f docker-compose.test.yml up --exit-code-from lib
+      - name: Run Tests
+        run: yarn test
       - name: Semantic Release
         run: |
           yarn release
