--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "rimraf dist",
     "prepublishOnly": "npm run build",
     "test": "jest",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "release": "semantic-release"
   },
   "dependencies": {},
   "devDependencies": {
