--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
       "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/explicit-member-accessibility": "off",
       "@typescript-eslint/no-parameter-properties": "off",
-      "@typescript-eslint/interface-name-prefix": "off"
+      "@typescript-eslint/interface-name-prefix": "off",
+      "@typescript-eslint/no-var-requires": "off"
     }
   },
   "prettier": {
