ci: format .gitignore and rm .npmignore

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "test:cov": "jest --coverage",
     "release": "semantic-release"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {},
   "devDependencies": {
     "@semantic-release/changelog": "5.0.0",
