--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "functional-components"
   ],
   "scripts": {
-    "build": "tsc && rollup -c rollup.config.ts",
+    "build": "tsc && rollup -c rollup.config.js",
     "clean": "rimraf dist",
     "prepublishOnly": "npm run build",
     "test": "jest",
@@ -28,6 +28,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
     "@semantic-release/changelog": "6.0.2",
     "@semantic-release/git": "10.0.1",
     "@types/jest": "27.5.2",
@@ -45,7 +46,6 @@
     "react-dom": "18.2.0",
     "rimraf": "4.1.2",
     "rollup": "3.17.2",
-    "rollup-plugin-typescript": "1.0.1",
     "semantic-release": "19.0.5",
     "ts-jest": "26.5.6",
     "tslib": "2.5.0",
